--- a/src/pages/aboutUs/AboutUs.module.css
+++ b/src/pages/aboutUs/AboutUs.module.css
@@ -1,6 +1,6 @@
 .container{
     height: 100vh;
-    background-image: url(/home/mark42/functionup/react/projects/gym-project1/gym-project1/src/assets/img_14.jpg);
+    background-image: url(../../assets/img_14.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
