--- a/src/pages/footer/Footer.module.css
+++ b/src/pages/footer/Footer.module.css
@@ -10,7 +10,7 @@
    
 }
 .bkimg{
-    background-image: url(/home/mark42/functionup/react/projects/gym-project1/gym-project1/src/assets/img_10.jpg);
+    background-image: url(../../assets/img_10.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
