--- a/src/pages/aboutUs/AboutUs.module.css
+++ b/src/pages/aboutUs/AboutUs.module.css
@@ -1,25 +1,30 @@
 .container{
-    height: 100vh;
-    background-image: url(../../assets/img_14.jpg);
+    height: 200vh;
+    background-image: url('../../assets/img_14.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-}
+} 
 .video_div{
-    height: 42vh;
     display: flex;
     flex-direction: row;
     margin: 2rem;
-    color: #f8edeb;
+    color: #adb5bd;
     gap: 6rem;
     font-size: large;
     font-weight: 500;
     overflow: hidden;
 }
+.video_div h1{
+    color: tomato;
+}
+.video_div span{
+    color:aliceblue;
+}
+
 .about_div{
-    height: 42vh;
     display: flex;
     flex-direction: row;
-    color: #fff;
+    color: #adb5bd;
     margin: 2rem;
     font-size: large;
     font-weight: 500;
@@ -27,13 +32,37 @@
     gap: 6rem;
     
 }
-h1{
+.about_div h1{
     color: tomato;
 }
+.about_div span{
+    color:aliceblue;
+}
 
-@media only screen and  (max-width: 1020px){
+
+@media screen and  (max-width: 1020px){
     .main_aboutdiv{
         display: block;
-        max-width: 70vw;
+        max-width: 70vw; 
     }
+    .content{
+        display: block;
+
+    }
+    .video_div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        margin-left: 10em;
+        /* justify-content: center; */
+    }
+    .about_div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 70%;
+        margin-left: 10em;
+    }
+    
 }
