--- a/src/pages/footer/Footer.module.css
+++ b/src/pages/footer/Footer.module.css
@@ -1,6 +1,3 @@
-.container{
-    margin: 0;
-}
 .main_footer{
     /* border: 2px solid red; */
     /* margin-top: 2em;  */
@@ -10,7 +7,7 @@
    
 }
 .bkimg{
-    background-image: url(../../assets/img_10.jpg);
+    background-image: url('../../assets/img_10.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
