--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -24,7 +24,7 @@
 .data {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     width: 50%;
     margin-right: 2rem;
@@ -46,8 +46,8 @@
 
 .container input {
        
- height: 2rem;
- width: 20rem;
+ height: 2.5rem;
+ width: 20vw;
  margin-top: 0.5rem;
  margin-bottom: 2rem;
  border: none;
@@ -77,10 +77,11 @@
     
 }
 .data p{
-    font-size: 2rem;
-    font-weight: 400;
-    color: #fff;
-
+    font-size: 1rem;
+    margin: 0;
+    /* font-weight: 400;
+    color: white;
+     text-align: center; */
 }
 .link{
     color: lightgreen;
