--- a/src/pages/program/Program.module.css
+++ b/src/pages/program/Program.module.css
@@ -1,27 +1,38 @@
 .container{
   background-color: #000814;
-  height: 100vh;
+  height: 150vh;
 }
 .image_container {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 2rem;
-  width: 100%;
 
-}
+} 
 
 img {
-  height: 90vh;
+  width: 65%;
+  height: 88vh;
   object-fit: cover;
 }
 
 p {
-  margin: 2rem;
+  margin-top: 10px;
+  /* margin-left: 5rem; */
   font-size: 18px;
-  font-weight: 500;
-  font-size: 2rem;
+  font-weight: bold;
   text-align: center;
-  color: #e9d8a6;
-  overflow: hidden;
+  color: #d5bdaf;
+}
+@media screen and (max-width: 1020px) {
+  .image_container{
+    display: flex;
+    flex-direction: column;
+  }
+  .textContent{
+    text-align: center;
+   width: 60%;
+   font-size: 1em;
+  }
+  
 }
