--- a/src/pages/registration/Registration.module.css
+++ b/src/pages/registration/Registration.module.css
@@ -42,9 +42,7 @@
 }
 
 .RegistrationPage input {
-           
- height: 2.5rem;
- /* padding: 0.5em; */
+ padding: 0.5em;
  width: 20vw;
  margin-top: 0.5rem;
  /* margin-bottom: 2rem; */
@@ -71,7 +69,7 @@
 .RegistrationPage button[type="submit"] {
  
     height: 3rem;
-    width: 6rem;
+    width: 6em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,7 +78,6 @@
     box-shadow: 0 5px 0 #240046;
     color: #eae2b7;
     text-shadow: 0 0.2px 0.5px #000;
-    font-size: large;
     font-weight: bold;
     cursor: pointer;
     outline: 0;
