--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -1,95 +1,101 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.container{
+.container {
     display: flex;
-    flex-direction: row;
-    height: 100vh;
-}
-.leftDiv img{
-   width: 100%;
-    height: 100vh;
-}
-.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 50%;
-    background-color: #000;
+    align-items: center;
+    min-height: 100vh;
+    background-image: url('https://wallpaper.dog/large/20502651.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.form {
+    width: 80%;
+    max-width: 300px;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .data {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    justify-content: center;
-    width: 50%;
-    margin-right: 2rem;
-    background-color: transparent;
-    border-radius: 0.5rem solid black;
-    box-shadow: 0 0.25rem 0.5rem rgba(6, 1, 1, 0.3);
-}
-.container h1 {
-    font-size: 2rem;
-    margin-right: 2.5rem;
-    margin-bottom: 2rem;
 }
 
-.form label {
-    color: #ffea00;
-    font-size: large;
-    font-weight: 400;
-    text-shadow: 0.5px 1px #000;}
-
-.container input {
- padding: 0.5em;      
- width: 20vw;
- margin-top: 0.5rem;
- margin-bottom: 2rem;
- border: none;
- border-radius: 6px;
- box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-}
-
-.container button {
- 
-    height: 3rem;
-    width: 6rem;
+.inputContainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #023e8a;
-    border-radius: 8px;
-    box-shadow: 0 5px 0 #240046;
-    color: #eae2b7;
-    text-shadow: 0 0.2px 0.5px #000;
-    font-size: large;
-    font-weight: bold;
-    cursor: pointer;
-    outline: 0;
-    padding: 12px 20px ;
-    transition: all .1s linear;
-   margin-bottom: 3rem;
-    
-}
-.data p{
-    font-size: 1rem;
-    margin: 0;
-    /* font-weight: 400;
-    color: white;
-     text-align: center; */
-}
-.link{
-    color: lightgreen;
+    flex-direction: column;
+    margin-bottom: 20px;
 }
 
-.container button:hover {
-    background-color:tomato;
+label {
+    font-weight: bold;
+    margin-bottom: 5px;
 }
-.container span{
-    margin-bottom: 10px;
+
+input {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #f9f9f9;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+span {
     color: red;
+    margin-bottom: 10px;
+}
+
+.loginButton {
+    background-color: #1E90FF;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.loginButton:hover {
+    background-color:#008B8B;;
+}
+
+.loginButton:active {
+    background-color: #00CED1;
+}
+
+.linkText {
+    color: #000;
+}
+
+.registrationLink {
+    color: #1E90FF;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 480px) {
+
+    .container {
+        padding: 20px;
+    }
+
+    .form {
+        width: 100%;
+        padding: 10px;
+    }
+
+    input {
+        font-size: 16px;
+    }
+
+    .loginButton {
+        font-size: 16px;
+    }
 }
