--- a/src/pages/training/Training.module.css
+++ b/src/pages/training/Training.module.css
@@ -1,18 +1,48 @@
-.container{
+.container {
+  height: 100vh;
   background-color: #01161e;
 
 }
-.carousel{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.imgContainer{
+
+.carousel {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3em;
+}
+
+.imgContainer {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
   justify-content: center;
   align-items: center;
-  color: #edf6f9;
-  width: 80%;
+  flex-direction: column;
+}
+.imgContainer p{
+  color: #fff;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .carousel {
+    flex-direction: row;
+    height: auto;
+  }
+
+  .imgContainer {
+    width: 50%;
+    height: 87vh;
+  }
+
+  img {
+    height: 100%;
+  }
 }
